fix: Enhance security and modularize scripts in popup and wheel components, fix bugs

--- a/popup.html
+++ b/popup.html
@@ -54,8 +54,8 @@
   </div>
 
   <script src="libs/sweetalert.min.js"></script>
-  <script src="wheel.js"></script>
-  <script src="popup.js"></script>
+  <script src="wheel.js" type="module"></script>
+  <script src="popup.js" type="module"></script>
 
 </body>
 
