feat: Add dietary preferences options to popup; update settings handling in popup.js

--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,27 @@
           <option value="3,4">$$$ - $$$$</option>
         </select>
       </div>
+      <div class="form-group">
+        <label>Dietary Preferences 🥗</label>
+        <div class="dietary-options">
+          <div class="dietary-option">
+            <input type="checkbox" id="vegetarian" name="dietary" value="vegetarian">
+            <label for="vegetarian">Vegetarian</label>
+          </div>
+          <div class="dietary-option">
+            <input type="checkbox" id="vegan" name="dietary" value="vegan">
+            <label for="vegan">Vegan</label>
+          </div>
+          <div class="dietary-option">
+            <input type="checkbox" id="gluten-free" name="dietary" value="gluten-free">
+            <label for="gluten-free">Gluten-Free</label>
+          </div>
+          <div class="dietary-option">
+            <input type="checkbox" id="halal" name="dietary" value="halal">
+            <label for="halal">Halal</label>
+          </div>
+        </div>
+      </div>
       <button id="save-settings">Save</button>
       <button id="close-settings">Back</button>
     </div>
